The header part of the site is finished.

--- a/index.html
+++ b/index.html
@@ -4,23 +4,96 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./images/icon.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="./images/t.jpg" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Document</title>
+    <link rel="manifest" href="./manifest.json" />
+    <title>Trafalgar</title>
   </head>
   <body>
     <header class="site-header">
       <div class="container site-header__container">
-        <div class="site-header__block"></div>
-        <nav class="site-nav"></nav>
+        <div class="site-header__block">
+          <div class="site-header__logo">
+            <a href="#">
+              <img src="./images/header-logo.svg" alt="trafalgar logo!" />
+            </a>
+          </div>
+          <ul class="site-header__list">
+            <li class="site-header__item">
+              <a href="#" class="site-header__item-link">Home</a>
+            </li>
+            <li class="site-header__item">
+              <a href="#" class="site-header__item-link">Find a doctor</a>
+            </li>
+            <li class="site-header__item">
+              <a href="#" class="site-header__item-link">Apps</a>
+            </li>
+            <li class="site-header__item">
+              <a href="#" class="site-header__item-link">Testimonials</a>
+            </li>
+            <li class="site-header__item">
+              <a href="#" class="site-header__item-link">About us</a>
+            </li>
+          </ul>
+          <div class="site-header__menu-logo">
+            <i
+              class="bx bx-menu-alt-left bx-burst bx-rotate-180 bx-md"
+              style="color: #000"></i>
+          </div>
+          <div class="site-header__mobile">
+            <div class="site-header__mobile-logos">
+              <div class="site-header__mobile-trafalgar">
+                <a href="#">
+                  <img src="./images/header-logo.svg" alt="trafalgar logo!" />
+                </a>
+              </div>
+              <div class="site-header__close-logo">
+                <i
+                  class="bx bx-x bx-burst bx-rotate-180 bx-md"
+                  style="color: #ffffff"></i>
+              </div>
+            </div>
+            <ul class="site-header__mobile-list">
+              <li class="site-header__mobile-item">
+                <a href="#" class="site-header__mobile-item-link">Home</a>
+                <i
+                  class="bx bxs-chevron-right bx-fade-left bx-sm"
+                  style="color: #ffffff"></i>
+              </li>
+              <li class="site-header__mobile-item">
+                <a href="#" class="site-header__mobile-item-link"
+                  >Find a doctor</a
+                >
+                <i
+                  class="bx bxs-chevron-right bx-fade-left bx-sm"
+                  style="color: #ffffff"></i>
+              </li>
+              <li class="site-header__mobile-item">
+                <a href="#" class="site-header__mobile-item-link">Apps</a>
+                <i
+                  class="bx bxs-chevron-right bx-fade-left bx-sm"
+                  style="color: #ffffff"></i>
+              </li>
+              <li class="site-header__mobile-item">
+                <a href="#" class="site-header__mobile-item-link"
+                  >Testimonials</a
+                >
+                <i
+                  class="bx bxs-chevron-right bx-fade-left bx-sm"
+                  style="color: #ffffff"></i>
+              </li>
+              <li class="site-header__mobile-item">
+                <a href="#" class="site-header__mobile-item-link">About us</a>
+                <i
+                  class="bx bxs-chevron-right bx-fade-left bx-sm"
+                  style="color: #ffffff"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main>
