--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
     <main>
       <section class="hero">
         <div class="container hero__container">
-          <div class="hero__block"></div>
+          <div class="hero__block">
+            <p class="hero__title"></p>
+          </div>
         </div>
       </section>
     </main>
