The hero part of the site has been updated.

--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
     <main>
       <section class="hero">
         <div class="container hero__container">
-          <div class="hero__block">
-            <p class="hero__title"></p>
-          </div>
+          <div class="hero__block"></div>
         </div>
       </section>
     </main>
