--- a/index.html
+++ b/index.html
@@ -99,7 +99,21 @@
     <main>
       <section class="hero">
         <div class="container hero__container">
-          <div class="hero__block"></div>
+          <div class="hero__block">
+            <div class="hero__content">
+              <h1 class="hero__content-title">Virtual healthcare for you</h1>
+              <p class="hero__content-text">
+                Trafalgar provides progressive, and affordable healthcare,
+                accessible on mobile and online for everyone
+              </p>
+              <a href="#" class="hero__content-btn">Consult today</a>
+            </div>
+            <div class="hero__img">
+              <img
+                src="./images/hero-healthcare.png"
+                alt="Virtual healthcare img!" />
+            </div>
+          </div>
         </div>
       </section>
     </main>
