The services section of the site has been added.

--- a/index.html
+++ b/index.html
@@ -116,6 +116,66 @@
           </div>
         </div>
       </section>
+      <section class="services">
+        <div class="container services__container">
+          <div class="services__block">
+            <div class="services__content">
+              <h2 class="services__content-title">Our services</h2>
+              <div class="services__content-line"></div>
+              <p class="services__content-text">
+                We provide to you the best choiches for you. Adjust it to your
+                health needs and make sure your undergo treatment with our
+                highly qualified doctors you can consult with us which type of
+                service is suitable for your health
+              </p>
+            </div>
+            <ul class="services__list">
+              <li class="services__item">
+                <h3 class="services__item-title">Search doctor</h3>
+                <p class="services__item-text">
+                  Choose your doctor from thousands of specialist, general, and
+                  trusted hospitals
+                </p>
+              </li>
+              <li class="services__item">
+                <h3 class="services__item-title">Online pharmacy</h3>
+                <p class="services__item-text">
+                  Buy your medicines with our mobile application with a simple
+                  delivery system
+                </p>
+              </li>
+              <li class="services__item">
+                <h3 class="services__item-title">Consultation</h3>
+                <p class="services__item-text">
+                  Free consultation with our trusted doctors and get the best
+                  recomendations
+                </p>
+              </li>
+              <li class="services__item">
+                <h3 class="services__item-title">Details info</h3>
+                <p class="services__item-text">
+                  Free consultation with our trusted doctors and get the best
+                  recomendations
+                </p>
+              </li>
+              <li class="services__item">
+                <h3 class="services__item-title">Emergency care</h3>
+                <p class="services__item-text">
+                  You can get 24/7 urgent care for yourself or your children and
+                  your lovely family
+                </p>
+              </li>
+              <li class="services__item">
+                <h3 class="services__item-title">Tracking</h3>
+                <p class="services__item-text">
+                  Track and save your medical history and health data
+                </p>
+              </li>
+            </ul>
+            <a href="#" class="services__btn">Learn more</a>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="site-footer">
       <div class="container site-footer__container">
