The healthcare providers section of the site has been added.

--- a/index.html
+++ b/index.html
@@ -176,6 +176,29 @@
           </div>
         </div>
       </section>
+      <section class="providers">
+        <div class="container providers__container">
+          <div class="providers__block">
+            <div class="providers__img">
+              <img
+                src="./images/providers-healthcare.png"
+                alt="Leading healthcare providers img!" />
+            </div>
+            <div class="providers__content">
+              <h2 class="providers__content-title">
+                Leading healthcare providers
+              </h2>
+              <div class="providers__content-line"></div>
+              <p class="providers__content-text">
+                Trafalgar provides progressive, and affordable healthcare,
+                accessible on mobile and online for everyone. To us, it’s not
+                just work. We take pride in the solutions we deliver
+              </p>
+              <a href="#" class="providers__content-btn">Learn more</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="site-footer">
       <div class="container site-footer__container">
