The download section of the site has been added.

--- a/index.html
+++ b/index.html
@@ -199,6 +199,27 @@
           </div>
         </div>
       </section>
+      <section class="download">
+        <div class="container download__container">
+          <div class="download__block">
+            <div class="download__content">
+              <h2 class="download__content-title">Download our mobile apps</h2>
+              <div class="download__content-line"></div>
+              <p class="download__content-text">
+                Our dedicated patient engagement app and web portal allow you to
+                access information instantaneously (no tedeous form, long calls,
+                or administrative hassle) and securely
+              </p>
+              <a href="#" class="download__content-btn">Download</a>
+            </div>
+            <div class="download__img">
+              <img
+                src="./images/download-img.png"
+                alt="Download our mobile apps img!" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="site-footer">
       <div class="container site-footer__container">
