The testimonials section of the site has been added.

--- a/index.html
+++ b/index.html
@@ -220,6 +220,39 @@
           </div>
         </div>
       </section>
+      <section class="testimonials">
+        <div class="container testimonials__container">
+          <div class="testimonials__block">
+            <h2 class="testimonials__title">What our customer are saying</h2>
+            <div class="testimonials__line"></div>
+            <ul class="testimonials__list">
+              <li class="testimonials__item">
+                <div class="testimonials__item-img">
+                  <img
+                    src="./images/testimonials-img.png"
+                    alt="Edward Newgate img!" />
+                </div>
+                <div class="testimonials__item-content">
+                  <h3 class="testimonials__item-content-title">
+                    Edward Newgate
+                  </h3>
+                  <p class="testimonials__item-content-text">Founder Circle</p>
+                </div>
+              </li>
+              <li class="testimonials__item">
+                <p class="testimonials__item-text">
+                  “Our dedicated patient engagement app and web portal allow you
+                  to access information instantaneously (no tedeous form, long
+                  calls, or administrative hassle) and securely”
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="testimonials__icon">
+            <img src="./images/arrow-nav-icon.svg" alt="arrow nav icon!" />
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="site-footer">
       <div class="container site-footer__container">
