The article section of the site has been added.

--- a/index.html
+++ b/index.html
@@ -253,6 +253,46 @@
           </div>
         </div>
       </section>
+      <section class="article">
+        <div class="container article__container">
+          <div class="article__block">
+            <h2 class="article__title">Check out our latest article</h2>
+            <div class="article__line"></div>
+            <ul class="article__list">
+              <li class="article__item">
+                <div class="article__item-img">
+                  <img src="" alt="">
+                </div>
+                <h3 class="article__item-title">Disease detection, check 
+                  up in the laboratory</h3>
+                <p class="article__item-text">In this case, the role of the health laboratory is very important to do
+                  a disease detection...</p>
+                <a href="#" class="article__item-link">Read more</a>
+              </li>
+              <li class="article__item">
+                <div class="article__item-img">
+                  <img src="" alt="">
+                </div>
+                <h3 class="article__item-title">Herbal medicines that are 
+                  safe for consumption</h3>
+                <p class="article__item-text">Herbal medicine is very widely used at this time because of its very good for your health...</p>
+                <a href="#" class="article__item-link">Read more</a>
+              </li>
+              <li class="article__item">
+                <div class="article__item-img">
+                  <img src="" alt="">
+                </div>
+                <h3 class="article__item-title">Natural care for healthy 
+                  facial skin</h3>
+                <p class="article__item-text">A healthy lifestyle should start from now and also for your skin health.
+                  There are some...</p>
+                <a href="#" class="article__item-link">Read more</a>
+              </li>
+            </ul>
+            <a href="#" class="article__btn">View all</a>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="site-footer">
       <div class="container site-footer__container">
