The article section of the site has been updated.

--- a/index.html
+++ b/index.html
@@ -261,31 +261,50 @@
             <ul class="article__list">
               <li class="article__item">
                 <div class="article__item-img">
-                  <img src="" alt="">
+                  <img
+                    src="./images/article-item1-img.jpg"
+                    alt="Disease detection, check 
+                  up in the laboratory img!" />
                 </div>
-                <h3 class="article__item-title">Disease detection, check 
-                  up in the laboratory</h3>
-                <p class="article__item-text">In this case, the role of the health laboratory is very important to do
-                  a disease detection...</p>
+                <h3 class="article__item-title">
+                  Disease detection, check up in the laboratory
+                </h3>
+                <p class="article__item-text">
+                  In this case, the role of the health laboratory is very
+                  important to do a disease detection...
+                </p>
                 <a href="#" class="article__item-link">Read more</a>
               </li>
               <li class="article__item">
                 <div class="article__item-img">
-                  <img src="" alt="">
+                  <img
+                    src="./images/article-item2-img.jpg"
+                    alt="Herbal medicines that are 
+                  safe for consumption img!" />
                 </div>
-                <h3 class="article__item-title">Herbal medicines that are 
-                  safe for consumption</h3>
-                <p class="article__item-text">Herbal medicine is very widely used at this time because of its very good for your health...</p>
+                <h3 class="article__item-title">
+                  Herbal medicines that are safe for consumption
+                </h3>
+                <p class="article__item-text">
+                  Herbal medicine is very widely used at this time because of
+                  its very good for your health...
+                </p>
                 <a href="#" class="article__item-link">Read more</a>
               </li>
               <li class="article__item">
                 <div class="article__item-img">
-                  <img src="" alt="">
+                  <img
+                    src="./images/article-item3-img.jpg"
+                    alt="Natural care for healthy 
+                  facial skin img!" />
                 </div>
-                <h3 class="article__item-title">Natural care for healthy 
-                  facial skin</h3>
-                <p class="article__item-text">A healthy lifestyle should start from now and also for your skin health.
-                  There are some...</p>
+                <h3 class="article__item-title">
+                  Natural care for healthy facial skin
+                </h3>
+                <p class="article__item-text">
+                  A healthy lifestyle should start from now and also for your
+                  skin health. There are some...
+                </p>
                 <a href="#" class="article__item-link">Read more</a>
               </li>
             </ul>
@@ -296,7 +315,9 @@
     </main>
     <footer class="site-footer">
       <div class="container site-footer__container">
-        <div class="site-footer__block"></div>
+        <div class="site-footer__block">
+          
+        </div>
       </div>
     </footer>
     <script src="./js/main.js"></script>
