The article section of the site has been updated.

--- a/index.html
+++ b/index.html
@@ -315,9 +315,7 @@
     </main>
     <footer class="site-footer">
       <div class="container site-footer__container">
-        <div class="site-footer__block">
-          
-        </div>
+        <div class="site-footer__block"></div>
       </div>
     </footer>
     <script src="./js/main.js"></script>
