--- a/index.html
+++ b/index.html
@@ -17,25 +17,29 @@
       <div class="container site-header__container">
         <div class="site-header__block">
           <div class="site-header__logo">
-            <a href="#">
+            <a href="#home">
               <img src="./images/header-logo.svg" alt="trafalgar logo!" />
             </a>
           </div>
           <ul class="site-header__list">
             <li class="site-header__item">
-              <a href="#" class="site-header__item-link">Home</a>
+              <a href="#home" class="site-header__item-link">Home</a>
             </li>
             <li class="site-header__item">
-              <a href="#" class="site-header__item-link">Find a doctor</a>
+              <a href="#find_a_doctor" class="site-header__item-link"
+                >Find a doctor</a
+              >
             </li>
             <li class="site-header__item">
-              <a href="#" class="site-header__item-link">Apps</a>
+              <a href="#apps" class="site-header__item-link">Apps</a>
             </li>
             <li class="site-header__item">
-              <a href="#" class="site-header__item-link">Testimonials</a>
+              <a href="#testimonials" class="site-header__item-link"
+                >Testimonials</a
+              >
             </li>
             <li class="site-header__item">
-              <a href="#" class="site-header__item-link">About us</a>
+              <a href="#about_us" class="site-header__item-link">About us</a>
             </li>
           </ul>
           <div class="site-header__menu-logo">
@@ -46,7 +50,7 @@
           <div class="site-header__mobile">
             <div class="site-header__mobile-logos">
               <div class="site-header__mobile-trafalgar">
-                <a href="#">
+                <a href="#home">
                   <img src="./images/header-logo.svg" alt="trafalgar logo!" />
                 </a>
               </div>
@@ -58,13 +62,13 @@
             </div>
             <ul class="site-header__mobile-list">
               <li class="site-header__mobile-item">
-                <a href="#" class="site-header__mobile-item-link">Home</a>
+                <a href="#home" class="site-header__mobile-item-link">Home</a>
                 <i
                   class="bx bxs-chevron-right bx-fade-left bx-sm"
                   style="color: #ffffff"></i>
               </li>
               <li class="site-header__mobile-item">
-                <a href="#" class="site-header__mobile-item-link"
+                <a href="#find_a_doctor" class="site-header__mobile-item-link"
                   >Find a doctor</a
                 >
                 <i
@@ -72,13 +76,13 @@
                   style="color: #ffffff"></i>
               </li>
               <li class="site-header__mobile-item">
-                <a href="#" class="site-header__mobile-item-link">Apps</a>
+                <a href="#apps" class="site-header__mobile-item-link">Apps</a>
                 <i
                   class="bx bxs-chevron-right bx-fade-left bx-sm"
                   style="color: #ffffff"></i>
               </li>
               <li class="site-header__mobile-item">
-                <a href="#" class="site-header__mobile-item-link"
+                <a href="#testimonials" class="site-header__mobile-item-link"
                   >Testimonials</a
                 >
                 <i
@@ -86,7 +90,9 @@
                   style="color: #ffffff"></i>
               </li>
               <li class="site-header__mobile-item">
-                <a href="#" class="site-header__mobile-item-link">About us</a>
+                <a href="#about_us" class="site-header__mobile-item-link"
+                  >About us</a
+                >
                 <i
                   class="bx bxs-chevron-right bx-fade-left bx-sm"
                   style="color: #ffffff"></i>
@@ -97,7 +103,7 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero" id="home">
         <div class="container hero__container">
           <div class="hero__block">
             <div class="hero__content">
@@ -116,7 +122,7 @@
           </div>
         </div>
       </section>
-      <section class="services">
+      <section class="services" id="about_us">
         <div class="container services__container">
           <div class="services__block">
             <div class="services__content">
@@ -199,7 +205,7 @@
           </div>
         </div>
       </section>
-      <section class="download">
+      <section class="download" id="apps">
         <div class="container download__container">
           <div class="download__block">
             <div class="download__content">
@@ -220,7 +226,7 @@
           </div>
         </div>
       </section>
-      <section class="testimonials">
+      <section class="testimonials" id="testimonials">
         <div class="container testimonials__container">
           <div class="testimonials__block">
             <h2 class="testimonials__title">What our customer are saying</h2>
@@ -253,7 +259,7 @@
           </div>
         </div>
       </section>
-      <section class="article">
+      <section class="article" id="find_a_doctor">
         <div class="container article__container">
           <div class="article__block">
             <h2 class="article__title">Check out our latest article</h2>
@@ -315,7 +321,45 @@
     </main>
     <footer class="site-footer">
       <div class="container site-footer__container">
-        <div class="site-footer__block"></div>
+        <div class="site-footer__block">
+          <ul class="site-footer__list">
+            <li class="site-footer__item">
+              <a href="#" class="site-footer__item-title">Trafalgar</a>
+              <p class="site-footer__item-text">
+                Trafalgar provides progressive, and affordable healthcare,
+                accessible on mobile and online for everyone
+              </p>
+              <p class="site-footer__item-text">
+                ©Trafalgar PTY LTD 2020. All rights reserved
+              </p>
+            </li>
+            <li class="site-footer__item">
+              <h4 class="site-footer__item-title">Company</h4>
+              <a href="#about_us" class="site-footer__item-link">About</a>
+              <a href="#testimonials" class="site-footer__item-link"
+                >Testimonials</a
+              >
+              <a href="#find_a_doctor" class="site-footer__item-link"
+                >Find a doctor</a
+              >
+              <a href="#apps" class="site-footer__item-link">Apps</a>
+            </li>
+            <li class="site-footer__item">
+              <h4 class="site-footer__item-title">Region</h4>
+              <a href="#" class="site-footer__item-link">Indonesia</a>
+              <a href="#" class="site-footer__item-link">Singapore</a>
+              <a href="#" class="site-footer__item-link">Hongkong</a>
+              <a href="#" class="site-footer__item-link">Canada</a>
+            </li>
+            <li class="site-footer__item">
+              <h4 class="site-footer__item-title">Help</h4>
+              <a href="#" class="site-footer__item-link">Help center</a>
+              <a href="#" class="site-footer__item-link">Contact support</a>
+              <a href="#" class="site-footer__item-link">Instructions</a>
+              <a href="#" class="site-footer__item-link">How it works</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <script src="./js/main.js"></script>
